INTERNAL-496 - Fix null paramKey for price and category filters, and refactor code

--- a/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/filter.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/filter.phtml
@@ -19,7 +19,7 @@ $catalogHelper = $this->helper(Data::class);
 /** @var FilterInterface $filter */
 /** @var Template $template */
 
-$isRadioType = $filter->getName() === 'Price';
+$isRadioType = $filter->isRadioFilter($filter->getName());
 ?>
 
 <?php if ($escaper->escapeHtml($filter->getName()) === 'Price'): ?>
