INTERNAL-520 - Fix console errors when switching from mobile to desktop

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/navigation/left.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/navigation/left.phtml
@@ -63,7 +63,7 @@ if (!$count) {
                 </div>
 
                 <!-- Desktop categories -->
-                <template x-if="!$store.main.isMobile">
+                <template x-if="!$store.main.isMobile && isDesktopContentInitialized">
                     <!-- Desktop Sort -->
                     <fieldset
                         class="flex-1 max-md:hidden"
