Only allow color in plp attributes

--- a/app/design/frontend/Satoshi/Hyva/Magento_Swatches/templates/product/listing/renderer.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Swatches/templates/product/listing/renderer.phtml
@@ -70,7 +70,7 @@ $isProductInCart = in_array($productType, ['simple', 'virtual']) && $this->helpe
                 <?php $attributeId = $attribute->getAttributeId(); ?>
                 <?php $productAttribute = $attribute->getProductAttribute(); ?>
 
-                <?php if (!$productAttribute->getUsedInProductListing()) {
+                <?php if (!$productAttribute->getUsedInProductListing() || $productAttribute->getAttributeCode() !== 'color' ) {
                     continue;
                 } ?>
 
