INTERNAL-411-195 - Fix search result display of 'no result' then showing the results

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-categories.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search-categories.phtml
@@ -24,7 +24,7 @@ $categoryUrlSuffix = $breadcrumbsViewModel->getCategoryUrlSuffix();
             <h2 class="text-lg"><?= __('Categories') ?></h2>
         </div>
         <div class="flex flex-col gap-2">
-            <p x-show="!categories.length && searchTerm">
+            <p x-show="!isLoading && !categories.length && searchTerm">
                 <b class="font-semibold text-secondary-700"><?= __('Oops!') ?></b>
                 <?= __('We could not find any categories matching your search.') ?>
             </p>
