Add video-hero thumbnail

--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/template/content-type/satoshi-video-hero/default/master.html
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/template/content-type/satoshi-video-hero/default/master.html
@@ -12,6 +12,16 @@
             ></iframe>
         </div>
 
+        <img
+            css="data.image.css"
+            attr="data.image.attributes"
+            ko-style="data.image.style"
+            width="100%"
+            height="100%"
+            loading="lazy"
+            hidden
+        />
+
         <p
             attr="data.banner_height.attributes"
             ko-style="data.banner_height.style"
