INTERNAL-545 - Fix header icons issue on IOS

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/menu/menu-button.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/menu/menu-button.phtml
@@ -28,12 +28,18 @@ $block->setData('cache_tags', $blockCacheViewModel->collectBlockChildrenCacheTag
 >
     <div
         class="contents text-text-50"
+        :class="{
+            'invisible': isMenuVisible,
+        }"
         x-show="!isMenuVisible"
     >
         <?= $hyvaicons->renderHtml('menu') ?>
     </div>
     <div
         class="contents"
+        :class="{
+            'invisible': !isMenuVisible,
+        }"
         x-show="isMenuVisible"
         style="display: none;"
     >
