INTERNAL-520 - Remove isDesktopContentInitialized condition from left.phtml file

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/navigation/left.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/navigation/left.phtml
@@ -66,7 +66,7 @@ if (!$count) {
                 </div>
 
                 <!-- Desktop categories -->
-                <template x-if="!$store.main.isMobile && isDesktopContentInitialized">
+                <template x-if="!$store.main.isMobile">
                     <!-- Desktop Sort -->
                     <fieldset
                         class="flex-1 max-md:hidden"
