INTERNAL-520 - Fix PLP sorting issue on mobile

--- a/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/filters-popup.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/filters-popup.phtml
@@ -163,7 +163,7 @@ $sorter = $block->getData('sorter') ?? [];
                         <button
                             type="button"
                             class="button button--filled-primary grow"
-                            @click="applyFilters(currentName === 'Sort by' ? CurrentName : currentFilterName, currentFilterValue)"
+                            @click="applyFilters(currentName === 'Sort by' ? currentName : currentFilterName, currentFilterValue)"
                         >
                             <?= $escaper->escapeHtml(__('Apply')) ?>
                         </button>
