INTERNAL-559: Improve accessibility

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/layout/transition/transition-preview.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/layout/transition/transition-preview.phtml
@@ -38,6 +38,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
         </div>
         <div
             x-ref="scrollContainer"
+            :aria-hidden="!isActive"
             class="transition-preview__scroll"
             x-a11y-trap.watch="isActive"
         >
