--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/template/content-type/satoshi-menu/default/preview.html
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/template/content-type/satoshi-menu/default/preview.html
@@ -15,7 +15,7 @@
                 ko-style="data.heading.style"
             ></h2>
             <div>
-                <svg height="24" role="img" viewBox="0 0 24 24" width="24"
+                <svg height="24" viewBox="0 0 24 24" width="24"
                      xmlns="http://www.w3.org/2000/svg">
                     <path d="M10.707 17.707 16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"></path>
                 </svg>
@@ -35,5 +35,5 @@
             </div>
         </if>
     </div>
-    <render args="getOptions().template"/>
+    <render args="getOptions().template" />
 </div>
