INTERNAL-547-8 - Fix search input loses focus when deleting query text issue

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search.phtml
@@ -51,6 +51,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                 :class="{
                     'md:hidden': !$store.resizable.isVisible('search-desktop')
                 }"
+                x-a11y-trap-target.initial="$store.resizable.isVisible('search-desktop')"
                 x-a11y-trap-target.start="getIsSearchActive()"
             >
             <div
