Support components inheritance

--- a/src/satoshi-theme/web/satoshi/components/slider.css
+++ b/src/satoshi-theme/web/satoshi/components/slider.css
@@ -1,4 +1,5 @@
-.snap {
+@layer components {
+  .snap {
     -ms-scroll-snap-type: x mandatory;
     scroll-snap-type: x mandatory;
     -ms-overflow-style: none;
@@ -12,4 +13,5 @@
     & > div {
         scroll-snap-align: start;
     }
+  }
 }
