--- a/src/satoshi-theme/web/satoshi/components/button.css
+++ b/src/satoshi-theme/web/satoshi/components/button.css
@@ -1,59 +1,105 @@
 @layer components {
-    .btn {
-        @apply flex bg-gray-500 rounded-lg px-4 py-2 text-white text-base font-medium shadow-md items-center;
-
-        @screen md {
-            @apply px-6 text-lg;
+  .button {
+    @apply focus-visible:focus-ring relative inline-flex h-11 cursor-pointer touch-manipulation items-center justify-center whitespace-nowrap rounded-sm px-6 text-md font-medium leading-tight transition-all duration-200;
+  
+    @screen md {
+      @apply h-12;
+    }
+  
+    &--size {
+      &-sm {
+        @apply h-9 min-w-9 px-5 text-sm;
+      }
+  
+      &-md {
+        @apply rounded-sm px-6 py-3;
+      }
+    }
+  
+    &--filled {
+      &-primary {
+        @apply bg-primary-800 text-text-on-primary-bg;
+  
+        &:not(.button--disabled) {
+          @apply md:hover:bg-primary-700;
         }
-        @screen xl {
-            @apply text-base;
+      }
+  
+      &-secondary {
+        @apply bg-bg-400 text-primary-600;
+  
+        &:not(.button--disabled) {
+          @apply md:hover:bg-bg-600;
         }
-
-        svg {
-            @apply inline-flex;
+      }
+    }
+  
+    &--outline {
+      &-primary {
+        @apply border-1 border-solid border-primary-600 bg-transparent text-primary-600;
+  
+        &:not(.button--disabled) {
+          @apply md:hover:border-primary-700 md:hover:bg-primary-700 md:hover:text-bg-500;
         }
-
-        span {
-            vertical-align: middle;
+      }
+  
+      &-secondary {
+        @apply border-1 border-solid border-text-700 bg-transparent;
+  
+        &:not(.button--disabled) {
+          @apply md:hover:border-primary-500 md:hover:bg-bg-400 md:hover:text-primary-500 md:active:bg-bg-100;
+  
+          &.group-hoverable {
+            @apply md:group-hover:border-primary-500 md:group-hover:bg-bg-400 md:group-hover:text-primary-500 md:group-active:bg-bg-100;
+          }
         }
-
-        &:hover {
-             @apply bg-gray-600;
-         }
-
-        &:focus {
-             @apply outline-none border-transparent ring-4 ring-primary ring-opacity-50;
+  
+        &.selected {
+          @apply border-current text-primary-600;
+  
+          &:not(.button--disabled) {
+            @apply md:hover:bg-primary-50 md:active:bg-primary-100;
+          }
         }
+      }
     }
-
-
-    .btn-primary {
-        @apply bg-primary text-white shadow-md;
-
-        &:hover {
-            @apply bg-primary-lighter text-white shadow-lg;
+  
+    &--ghost {
+      &-primary {
+        @apply bg-transparent text-primary-500;
+  
+        &:not(.button--disabled) {
+          @apply md:hover:bg-bg-600;
         }
-
+      }
+  
+      &-secondary {
+        @apply bg-transparent text-secondary-600;
+  
+        &:not(.button--disabled) {
+          @apply md:hover:bg-secondary-500;
+        }
+      }
     }
-
-    .btn-secondary {
-        @apply bg-white border-2 border-primary-lighter text-black shadow-md;
-
-    &:hover {
-        @apply bg-white border-primary-darker shadow-lg;
+  
+    &--disabled {
+      @apply !cursor-not-allowed !opacity-50;
     }
-
-    &:focus {
-        @apply border-2 border-transparent;
+  
+    &__icon {
+      @apply relative inline-flex shrink-0 items-center justify-center;
+  
+      svg {
+        @apply icon;
+      }
+  
+      &--left {
+        @apply mr-3;
+      }
+  
+      &--right {
+        @apply ml-3;
+      }
     }
-
-    }
-
-    .btn-size-lg {
-        @apply px-10 py-4 text-lg;
-    }
-
-    .btn-size-sm {
-        @apply px-2 py-2 text-sm;
-    }
+  }
 }
