Support Typescript inheritance

--- a/src/satoshi-theme/Hyva_Theme/templates/page/js/alpinejs.phtml
+++ b/src/satoshi-theme/Hyva_Theme/templates/page/js/alpinejs.phtml
@@ -19,7 +19,7 @@ use Magento\Framework\View\Element\Template;
 ?>
 <!-- Inject satoshi custom js logic -->
 <script type="module"
-        src="<?= $escaper->escapeUrl($block->getViewFileUrl('assets/app.js')) ?>"
+        src="<?= $escaper->escapeUrl($block->getViewFileUrl('dist/assets/app.js')) ?>"
         defer
         crossorigin
 ></script>
